syntax = "proto3";

package ccmanmodel;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/thanhpp/prom/pkg/timerpc/time.proto";

option go_package = "github.com/thanhpp/prom/cmd/ccman/repository/entity";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// card
message Card {
    uint32 ID = 1 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "gorm:\"Column:id; Type:int; primaryKey\""];
    string Title = 2 [(gogoproto.jsontag) = "title", (gogoproto.moretags) = "gorm:\"Column:title; Type:text\""];
    string Description = 3 [(gogoproto.jsontag) = "description", (gogoproto.moretags) = "gorm:\"Column:description; Type:text\""];
    uint32 ColumnID = 4 [(gogoproto.jsontag) = "column_id", (gogoproto.moretags) = "gorm:\"Column:column_id; Type:bigint\""];
    uint32 AssignedTo = 5 [(gogoproto.jsontag) = "assigned_to", (gogoproto.moretags) = "gorm:\"Column:assigned_to; Type:bigint\""];
    uint32 CreatedBy  = 6 [(gogoproto.jsontag) = "created_by", (gogoproto.moretags) = "gorm:\"Column:created_by; Type:bigint\""];
    timerpc.Time DueDate = 7 [(gogoproto.jsontag) = "due_date", (gogoproto.moretags) = "gorm:\"Column:due_date\""];
    timerpc.Time CreatedAt = 8 [(gogoproto.jsontag) = "created_at", (gogoproto.moretags) = "gorm:\"Column:created_at\""];
    timerpc.Time UpdatedAt = 9 [(gogoproto.jsontag) = "updated_at", (gogoproto.moretags) = "gorm:\"Column:updated_at\""];
    timerpc.Time DeletedAt = 10 [(gogoproto.jsontag) = "deleted_at", (gogoproto.moretags) = "gorm:\"Column:deleted_at\""];
}

// column
message Column {
    uint32 ID = 1 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "gorm:\"Column:id; Type:int; primaryKey; autoIncrement\""];
    string Title = 2 [(gogoproto.jsontag) = "title", (gogoproto.moretags) = "gorm:\"Column:title; Type:text\""];
    uint32 ProjectID = 3 [(gogoproto.jsontag) = "project_id", (gogoproto.moretags) = "gorm:\"Column:project_id; Type:bigint\""];
    repeated Card Cards = 4 [(gogoproto.jsontag) = "cards", (gogoproto.moretags) = "gorm:\"foreignKey:ColumnID; references:ID\""];
    uint32 CreatedBy  = 5 [(gogoproto.jsontag) = "created_by", (gogoproto.moretags) = "gorm:\"Column:created_by; Type:bigint\""];
    timerpc.Time CreatedAt = 6 [(gogoproto.jsontag) = "created_at", (gogoproto.moretags) = "gorm:\"Column:created_at\""];
    timerpc.Time UpdatedAt = 7 [(gogoproto.jsontag) = "updated_at", (gogoproto.moretags) = "gorm:\"Column:updated_at\""];
    timerpc.Time DeletedAt = 8 [(gogoproto.jsontag) = "deleted_at", (gogoproto.moretags) = "gorm:\"Column:deleted_at\""]; 
}